# quectel-5g-tools

./: .gitignore  5g-monitor.py  5g-scan.py  CLAUDE.md  LICENSE  README.md  at  force_bands.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: mm-ignore-tty  quectel.json  quectel.toml  quectel.uci
etc/init.d/: 5g-led-bars  5g-watchdog  mbim-watchdog
etc/uci-defaults/: 95-5g-led-bars  96-wwan-modemmanager
grafana/: README.md  _source-dashboard.json  generate.py  quectel-5g-monitor.json
legacy/: README.md
legacy/python/: 5g-scan-original.py  setup.py
legacy/python/src/quectel/: config.py  frequency.py
legacy/src/quectel/: modem.py  parser.py  thresholds.py
lua/prometheus-collectors/: quectel-watchdog.lua  quectel.lua
lua/quectel/: display.lua  frequency.lua  init.lua  modem.lua  parser.lua  thresholds.lua  uci.lua  utils.lua
openwrt/: Makefile
openwrt/quectel-5g-tools/: Makefile
src/: mbim-watchdog.c
src/quectel/: __init__.py  config.py  frequency.py  models.py  modem.py  parser.py
stats/: README.md  nr-stats.py
tests/: run-all  test-collector  test-parser  test-qnwlock-parser  test_frequency.py  test_parser.py  test_thresholds.py
